src/app/pages/menu/menu.page.scss
.menu {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 100001;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100vh;
    width: 100vw;
    padding: 10vh 0;
    filter: saturate(100%) brightness(120%) contrast(100%);
}

.background {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    background-color: rgb(118, 235, 255);
    background-image: url("../../../assets/images/balloon_background2.png");
    background-position: 42%;
    background-repeat: no-repeat;
    background-size: cover;
    transform: scale(1.4);
    filter: saturate(150%);
}

.start-button {
    letter-spacing: 0.08rem;
    height: 30vh;
    width: 30vh;
    font-family: "Valoon";
    font-size: 3.5vmax;
    background: rgba(255, 20, 147, 0);
    border: none;
    border-radius: 100%;
    color: white;
    -webkit-text-fill-color: white;
    -webkit-text-stroke: 1.5px white;
    background-image: url("../../../assets/images/pink_menu@2x.svg");
    background-position: top;
    background-repeat: no-repeat;
    background-size: contain;
    padding-bottom: 1.5rem;
    transition-duration: 100ms;
    transition-property: transform;
    transform: scale(0.5);
}

.start-button.inactive {
    opacity: 0;
    transition-delay: 850ms;
    transition-property: opacity;
    color: transparent;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 1.45px transparent;
    animation: float 900ms linear;
    animation-iteration-count: 1;
}

.start-button.active {
    transition-duration: 100ms;
    transition-property: transform;
    transform: scale(1);
    animation: bouncing 0.5s cubic-bezier(0.1, 0.25, 0.1, 1) 0s infinite
        alternate both;
    display: inline-block;
    position: relative;
}

.title {
    font-family: "Valoon";
    font-size: 20vw;
    font-weight: bold;
    -webkit-text-fill-color: rgb(255, 109, 255);
    -webkit-text-stroke: 2px white;
    animation: pulse 3s infinite;
    animation-delay: 3s;
    text-shadow:
        -2px -2px 0 black,
        2px -2px 0 black,
        -2px 2px 0 black,
        2px 2px 0 black;
}

@media (orientation: landscape) {
    .title {
        font-size: 15vh;
    }

    .background {
        background-position: bottom;
        transform: scale(1);
    }

    .start-button {
        background-position: 0 50%;
        height: 30vw;
        width: 30vw;
        font-size: 2.4vmax;
    }
}

@keyframes boxShadowPulse {
    0% {
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
    }

    79% {
        box-shadow: 0 0 0 15px rgba(0, 0, 0, 0.005);
    }

    80% {
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    }
}

@keyframes pulse {
    0% {
        transform: scale(1);
    }

    33% {
        transform: scale(1.05);
    }

    66% {
        transform: scale(1.05);
    }
}

@keyframes bouncing {
    0% {
        bottom: 0;
    }
    100% {
        bottom: 5vh;
    }
}

@keyframes float {
    0% {
        transform: scale(1) translateY(0);
    }
    86% {
        transform: scale(1.6) translateY(-12vh);
    }
    90% {
        transform: scale(1.5) translateY(-12vh);
    }
    94% {
        transform: scale(1.7) translateY(-12vh);
    }
    95% {
        transform: scale(1.6) translateY(-12vh);
    }
    96% {
        transform: scale(1.8) translateY(-12vh);
    }
    98% {
        transform: scale(2) translateY(-12vh);
    }
    100% {
        transform: scale(2.5) translateY(-12vh);
    }
}

